workflow fix